<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/input_activation_code"
        android:textColor="#000"
        android:textSize="19sp"/>

    <com.marlonmafra.android.widget.EditTextPassword
        android:id="@+id/txtActivationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/flat_edittext"
        android:hint="@string/activation_code"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColorHint="@color/dark_white2"
        app:showPasswordIcon="@drawable/ic_eye"
        app:hidePasswordIcon="@drawable/ic_eye_off"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btActivate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/login_color"
            android:gravity="center"
            android:text="@string/activate"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="@dimen/btTextSize"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>

</LinearLayout>