<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingTop="@dimen/dp_16"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/select_alert_level"
                android:textSize="18sp" />

            <com.nubytouch.crisiscare.ui.alerts.widget.AlertLevelView
                android:id="@+id/alert_level_view"
                android:layout_width="224dp"
                android:layout_height="56dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipients_layout"
            android:background="?selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/dp_8"
            android:paddingStart="@dimen/dp_16">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipients"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/recipients_label"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:textColor="@color/material_black_54" />

            </LinearLayout>


            <ImageButton
                android:id="@+id/recipients_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:background="?selectableItemBackground"
                app:srcCompat="@drawable/ic_account_multiple" />
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:text="@string/alert"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/describe_your_alert"
            android:inputType="textAutoComplete|textLongMessage|textMultiLine"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <FrameLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@color/dark_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_photo"
                android:drawablePadding="8dp"
                android:drawableTint="@android:color/white"
                android:gravity="center_vertical"
                android:text="@string/add_photo"
                android:textColor="@android:color/white" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>
